feat: add api for fingerprint
